@@ -1,3 +1,13 @@
+2002-07-23  Duncan Mak  <duncan@ximian.com>
+
+	* TestMenus.cs: Use MenuItem instead of ImageMenuItem, this test
+	works now.
+
+	* TestFileSelection.cs: window.Selections is crashing, remove
+	it. OK Button doesn't do anything now.
+
+	* WidgetViewer.cs: Add in a frame.
+
 2002-07-20  Duncan Mak  <duncan@ximian.com>
 
 	* TestSizeGroup.cs: Minor aesthetic changes.
